    * Add docs for Net::SSLeay::X509_STORE class.
    * Add docs for Net::SSLeay::SSL_CTX class.
  [Incompatible Changes]
    * Fix the return type of Net::SSLeay::SSL_CTX#set_verify method.
      
      [Before]
      method set_verify : int ($mode : int);
      
      [After]
      method set_verify : void ($mode : int);
    
    * Net::SSLeay::SSL_CTX does not throw system errors.
  [New Features]
    * Add Net::SSLeay::ERR#get_error method.
    * Add Net::SSLeay::ERR#peek_error method.
    * Add Net::SSLeay::ERR#peek_last_error method.
  [Changes]
    * Use ERR_peak_last_error instead of ERR_get_error not to change SSL error queue.
    
0.006 2024-11-05
  [Requirement Changes]
    * Require SPVM 0.990028.
  [Internal Changes]
    * Add private Net::SSLeay::X509_CRL#new_with_pointer method.
    * Add private Net::SSLeay::X509#new_with_pointer method.
    * Add private Net::SSLeay::X509_STORE#new_with_pointer method.
    * Add private Net::SSLeay::X509_STORE#new_with_pointer method.
    * Use more constructors.
    * Rename Net::SSLeay::X509_STORE#certs field to certs_list.
    * Rename Net::SSLeay::X509_STORE#crls field to crls_list.
  [Bug Fix]
    * Fix a bug that Net::SSLeay::SSL_CTX#add_cert method's memory bug.
    * Fix a bug that Net::SSLeay::SSL_CTX#add_crl method's memory bug.
    * Fix a bug that the return value of Net::SSLeay::ERR#error_string is not shortened before \0.
  [Document Improvement]
    * Improve docs for Net::SSLeay::BIO class.
    * Improve docs for Net::SSLeay class.
    * Add docs for SPVM::Net::SSLeay::ConfigBuilder.
    * Improve docs for Net::SSLeay::Constant.
    * Add docs for Net::SSLeay::PEM.
    * Add docs for Net::SSLeay::SSL_METHOD.
    
0.005 2024-11-02
  [Requirement Changes]
    * Require SPVM 0.990026.
  [Bug Fix]
    * Fix a bug that X509 object is not freed.
    * Fix a bug that X509_CRL object is not freed.
    * Fix a bug that X509_VERIFY_PARAM object is not freed.